@@ -1,4 +1,0 @@
-$(SHLIB): copy_scripts
-
-copy_scripts:
-	cp ../data/*.R ../inst/scripts
