@@ -3,6 +3,15 @@
 
 \section{Changes in version 0.1.1 (2023-11-28)}{
   \itemize{
+    \item \file{data/*.R} are no longer copied into \file{inst/scripts}
+    at install time by a \command{make} rule in \file{src/Makevars}.
+    There is no need: the scripts are preserved due to the setting of
+    \code{BuildResaveData: no}.  Hence \file{src/Makevars} is removed.
+  }
+}
+
+\section{Changes in version 0.1.1 (2023-11-28)}{
+  \itemize{
     \item Changes are logged in \file{inst/NEWS.Rd}.
 
     \item \code{Depends: R (>= 4.3.0)} for \verb{amsmath} in PDF
@@ -13,7 +22,7 @@
     \option{--no-resave-data} when \pkg{fastbeta} is not installed.
 
     \item \file{data/*.R} are copied into \file{inst/scripts}
-    at install time by a \command{make} rule in \code{src/Makevars}.
+    at install time by a \command{make} rule in \file{src/Makevars}.
 
     \item Typo in \file{src/sir.c} triggering \option{-Wformat}
     is fixed.
